--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -11,10 +11,11 @@
         android:id="@+id/map_Toolbar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#FF9800">
+        android:background="#FF9800"
+        app:contentInsetStart="10dp">
 
         <LinearLayout
-            android:layout_marginRight="15dp"
+            android:layout_marginRight="10dp"
             android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -22,8 +23,8 @@
 
             <ImageView
                 android:src="@drawable/profile_default"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
+                android:layout_width="40dp"
+                android:layout_height="40dp"/>
 
             <LinearLayout
                 android:gravity="center"
