--- a/app/src/main/res/layout/activity_muckpot_detail.xml
+++ b/app/src/main/res/layout/activity_muckpot_detail.xml
@@ -11,10 +11,11 @@
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#FF9800">
+        android:background="#FF9800"
+        app:contentInsetStart="10dp">
 
         <LinearLayout
-            android:layout_marginRight="15dp"
+            android:layout_marginRight="10dp"
             android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
