--- a/app/src/main/res/layout/activity_feed_write.xml
+++ b/app/src/main/res/layout/activity_feed_write.xml
@@ -30,7 +30,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent">
             </LinearLayout>
+
             <Button
+                android:id="@+id/post_success"
                 android:layout_marginVertical="5dp"
                 android:text="작성하기"
                 android:textColor="#f78025"
