--- a/app/src/main/res/layout/activity_muckpot_detail.xml
+++ b/app/src/main/res/layout/activity_muckpot_detail.xml
@@ -145,6 +145,17 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                 </LinearLayout>
+
+                <Button
+                    android:layout_gravity="right"
+                    android:layout_marginVertical="5dp"
+                    android:text="참여하기"
+                    android:textColor="#f78025"
+                    android:textSize="18dp"
+                    android:textStyle="bold"
+                    android:background="@drawable/feed_btn"
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
             <!-- 컨텐츠 영역 끝 -->
 
