--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -154,7 +154,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <ImageView
-                            android:src="@android:color/holo_purple"
+                            android:src="@drawable/ddeokqokgi"
+
                             android:layout_width="match_parent"
                             android:layout_height="180dp"/>
                     </LinearLayout>
@@ -166,7 +167,7 @@
                         android:layout_height="wrap_content">
                         <TextView
                             android:textSize="17dp"
-                            android:text="테스트테스2트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트"
+                            android:text="엽기 떡볶이 너무 맛있어요~♡\n다음에 또 먹으러 오고 싶어요!\n#떡볶이 #맛집 #왕십리 #한양대"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
                     </LinearLayout>
