--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -67,7 +67,8 @@
                     android:layout_height="wrap_content">
                     <ImageView
                         android:id="@+id/userProfile_ProfilePic"
-                        android:src="@drawable/profile_default"
+                        android:src="@drawable/sample_propic"
+                        android:scaleType="centerCrop"
                         android:layout_width="90dp"
                         android:layout_height="90dp"/>
                     <LinearLayout
@@ -76,14 +77,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
                         <TextView
-                            android:text="닉네임"
+                            android:text="ES"
                             android:textSize="25dp"
                             android:textStyle="bold"
                             android:layout_marginBottom="5dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
                         <TextView
-                            android:text="자기소개"
+                            android:text="먹고 싶은 걸 먹습니다."
                             android:textSize="20dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
@@ -109,7 +110,8 @@
                             android:layout_weight="0"
                             android:layout_width="60dp"
                             android:layout_height="60dp"
-                            android:src="@drawable/profile_default" />
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/sample_propic" />
 
                         <LinearLayout
                             android:layout_width="fill_parent"
@@ -128,14 +130,14 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginRight="7dp"
-                                    android:text="닉네임"
+                                    android:text="ES"
                                     android:textSize="20dp"
                                     android:textStyle="bold" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="게시시간"
+                                    android:text="10월 31일"
                                     android:textSize="15dp" />
                             </LinearLayout>
 
@@ -159,35 +161,41 @@
                             </LinearLayout>
                         </LinearLayout>
 
-                        <ImageButton
+                        <ImageView
                             android:layout_weight="0"
-                            android:layout_width="20dp"
-                            android:layout_height="60dp"
-                            android:src="@android:color/holo_green_dark" />
+                            android:layout_width="10dp"
+                            android:layout_height="30dp"
+                            android:src="@drawable/more" />
                     </LinearLayout>
 
                     <!--본문 텍스트 영역-->
                     <LinearLayout
+                        android:orientation="vertical"
                         android:layout_marginVertical="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <TextView
-                            android:textSize="17dp"
-                            android:text="테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트"
+                            android:textSize="22dp"
+                            android:text="엽기 떡볶이 너무 맛있어요~♡\n다음에 또 먹으러 오고 싶어요!"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+                        <TextView
+                            android:textColor="#F49200"
+                            android:textSize="20dp"
+                            android:text="#떡볶이 #맛집 #왕십리 #한양대"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
                     </LinearLayout>
-
                     <!--본문 이미지 영역-->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <ImageView
-                            android:src="@android:color/holo_purple"
+                            android:src="@drawable/ddeokqokgi"
+                            android:scaleType="centerCrop"
                             android:layout_width="match_parent"
                             android:layout_height="180dp"/>
                     </LinearLayout>
-
                     <!--하단 영역-->
                     <LinearLayout
                         android:layout_marginTop="10dp"
@@ -198,15 +206,15 @@
                         <!--답글-->
                         <LinearLayout
                             android:gravity="center_vertical"
-                            android:layout_marginRight="10dp"
+                            android:layout_marginRight="20dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
                             <ImageView
                                 android:src="@drawable/replies"
-                                android:layout_width="25dp"
-                                android:layout_height="25dp"/>
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"/>
                             <TextView
-                                android:text="153"
+                                android:text="15"
                                 android:textSize="17dp"
                                 android:layout_marginLeft="5dp"
                                 android:layout_width="wrap_content"
@@ -215,15 +223,15 @@
                         <!--좋아요-->
                         <LinearLayout
                             android:gravity="center_vertical"
-                            android:layout_marginRight="10dp"
+                            android:layout_marginRight="20dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
                             <ImageView
                                 android:src="@drawable/likes"
-                                android:layout_width="25dp"
-                                android:layout_height="25dp"/>
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"/>
                             <TextView
-                                android:text="1.9K"
+                                android:text="30"
                                 android:textSize="17dp"
                                 android:layout_marginLeft="5dp"
                                 android:layout_width="wrap_content"
@@ -237,10 +245,10 @@
                             android:layout_height="wrap_content">
                             <ImageView
                                 android:src="@drawable/pictures"
-                                android:layout_width="25dp"
-                                android:layout_height="25dp"/>
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"/>
                             <TextView
-                                android:text="3"
+                                android:text="1"
                                 android:textSize="17dp"
                                 android:layout_marginLeft="5dp"
                                 android:layout_width="wrap_content"
@@ -252,9 +260,8 @@
                             android:layout_weight="1"/>
                         <ImageView
                             android:src="@drawable/bookmark"
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"/>
-
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"/>
                     </LinearLayout>
 
                 </LinearLayout>
