--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -74,8 +74,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <TextView
+                    android:id="@+id/refresh"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:gravity="center"
+                    android:text="새로고침"
+                    android:textSize="20dp" />
+
                 <LinearLayout
-                    android:id="@+id/feed_AllFeed"
+                    android:visibility="gone"
+                    android:id="@+id/feed_AllFeed2"
                     android:background="@drawable/feed_border"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -90,8 +100,9 @@
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:id="@+id/feed_profile"
+                            android:id="@+id/feed_profileW"
                             android:layout_weight="0"
+                            android:scaleType="centerCrop"
                             android:layout_width="60dp"
                             android:layout_height="60dp"
                             android:src="@drawable/profile_default" />
@@ -110,6 +121,7 @@
                                 android:gravity="center_vertical"
                                 android:orientation="horizontal">
                                 <TextView
+                                    android:id="@+id/feed_nicknameW"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginRight="7dp"
@@ -119,7 +131,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="게시시간"
+                                    android:text="방금전"
                                     android:textSize="15dp" />
                             </LinearLayout>
 
@@ -141,36 +153,35 @@
                             </LinearLayout>
                         </LinearLayout>
 
-                        <ImageButton
-                            android:layout_weight="0"
-                            android:layout_width="20dp"
-                            android:layout_height="60dp"
-                            android:src="@android:color/holo_green_dark" />
-                    </LinearLayout>
-
-                    <!--본문 이미지 영역-->
-                    <LinearLayout
-                        android:layout_marginVertical="10dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
                         <ImageView
-                            android:src="@android:color/holo_purple"
-                            android:layout_width="match_parent"
-                            android:layout_height="180dp"/>
+                            android:layout_width="20dp"
+                            android:layout_height="30dp"
+                            android:layout_weight="0"
+                            android:src="@drawable/more" />
                     </LinearLayout>
 
                     <!--본문 텍스트 영역-->
                     <LinearLayout
-                        android:layout_marginBottom="10dp"
+                        android:orientation="vertical"
+                        android:layout_marginVertical="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <TextView
-                            android:textSize="17dp"
-                            android:text="테스트테스2트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트"
+                            android:textSize="22dp"
+                            android:text="한양여대"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
                     </LinearLayout>
-
+                    <!--본문 이미지 영역-->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:src="@drawable/hanyang"
+                            android:scaleType="centerCrop"
+                            android:layout_width="match_parent"
+                            android:layout_height="180dp"/>
+                    </LinearLayout>
                     <!--하단 영역-->
                     <LinearLayout
                         android:layout_marginTop="10dp"
@@ -189,7 +200,7 @@
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"/>
                             <TextView
-                                android:text="153"
+                                android:text="0"
                                 android:textSize="17dp"
                                 android:layout_marginLeft="5dp"
                                 android:layout_width="wrap_content"
@@ -206,7 +217,7 @@
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"/>
                             <TextView
-                                android:text="1.9K"
+                                android:text="0"
                                 android:textSize="17dp"
                                 android:layout_marginLeft="5dp"
                                 android:layout_width="wrap_content"
@@ -223,7 +234,178 @@
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"/>
                             <TextView
-                                android:text="3"
+                                android:text="1"
+                                android:textSize="17dp"
+                                android:layout_marginLeft="5dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_weight="1"/>
+                        <ImageView
+                            android:src="@drawable/bookmark"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"/>
+                    </LinearLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/feed_AllFeed"
+                    android:background="@drawable/feed_border"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="30dp">
+
+                    <!--프로필 영역-->
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/feed_profile"
+                            android:layout_weight="0"
+                            android:scaleType="centerCrop"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:src="@drawable/sample_propic" />
+
+                        <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="10dp"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="5dp"
+                                android:gravity="center_vertical"
+                                android:orientation="horizontal">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginRight="7dp"
+                                    android:text="ES"
+                                    android:textSize="20dp"
+                                    android:textStyle="bold" />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="10월 31일"
+                                    android:textSize="15dp" />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_vertical"
+                                android:orientation="horizontal">
+                                <ImageView
+                                    android:layout_width="15dp"
+                                    android:layout_height="15dp"
+                                    android:src="@drawable/location" />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="5dp"
+                                    android:text="서울시 성동구 한양여대"
+                                    android:textSize="15dp" />
+                            </LinearLayout>
+                        </LinearLayout>
+
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="30dp"
+                            android:layout_weight="0"
+                            android:src="@drawable/more" />
+                    </LinearLayout>
+
+                    <!--본문 텍스트 영역-->
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_marginVertical="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:textSize="22dp"
+                            android:text="엽기 떡볶이 너무 맛있어요~♡\n다음에 또 먹으러 오고 싶어요!"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+                        <TextView
+                            android:textColor="#F49200"
+                            android:textSize="20dp"
+                            android:text="#떡볶이 #맛집 #왕십리 #한양대"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+                    </LinearLayout>
+                    <!--본문 이미지 영역-->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:src="@drawable/ddeokqokgi"
+                            android:scaleType="centerCrop"
+                            android:layout_width="match_parent"
+                            android:layout_height="180dp"/>
+                    </LinearLayout>
+                    <!--하단 영역-->
+                    <LinearLayout
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <!--답글-->
+                        <LinearLayout
+                            android:gravity="center_vertical"
+                            android:layout_marginRight="20dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <ImageView
+                                android:src="@drawable/replies"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"/>
+                            <TextView
+                                android:text="15"
+                                android:textSize="17dp"
+                                android:layout_marginLeft="5dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                        <!--좋아요-->
+                        <LinearLayout
+                            android:gravity="center_vertical"
+                            android:layout_marginRight="20dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <ImageView
+                                android:src="@drawable/likes"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"/>
+                            <TextView
+                                android:text="30"
+                                android:textSize="17dp"
+                                android:layout_marginLeft="5dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+
+                        </LinearLayout>
+                        <!--사진-->
+                        <LinearLayout
+                            android:gravity="center_vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <ImageView
+                                android:src="@drawable/pictures"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"/>
+                            <TextView
+                                android:text="1"
                                 android:textSize="17dp"
                                 android:layout_marginLeft="5dp"
                                 android:layout_width="wrap_content"
@@ -241,6 +423,7 @@
                 </LinearLayout>
 
             </LinearLayout>
+
         </ScrollView>
         <!--컨텐츠 영역 끝-->
 
