--- a/app/src/main/res/layout/activity_feed_write.xml
+++ b/app/src/main/res/layout/activity_feed_write.xml
@@ -31,6 +31,7 @@
                 android:layout_height="match_parent">
             </LinearLayout>
             <Button
+                android:id="@+id/feedWrite_WriteBtn"
                 android:layout_marginVertical="5dp"
                 android:text="작성하기"
                 android:textColor="#f78025"
@@ -76,6 +77,7 @@
                 android:gravity="center_vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <ImageView
                     android:src="@drawable/location"
                     android:layout_width="20dp"
@@ -87,16 +89,30 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
+            <LinearLayout
+                android:padding="10dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:src="@drawable/camera"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginRight="5dp"/>
+                <TextView
+                    android:textSize="17dp"
+                    android:text="사진 첨부"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <ImageView
-                    android:src="@android:color/holo_blue_bright"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginRight="5dp"/>
+
             </LinearLayout>
 
         </LinearLayout>
