--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -22,6 +22,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/map_profileImg"
                 android:src="@drawable/profile_default"
                 android:layout_width="40dp"
                 android:layout_height="40dp"/>
@@ -31,12 +32,16 @@
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:src="@drawable/adress_top"/>
                 <TextView
                     android:id="@+id/map_ToolbarText"
-                    android:text="길거리 먹깨비"
+                    android:layout_marginLeft="5dp"
+                    android:text=""
                     android:textColor="#fff"
-                    android:textSize="24dp"
+                    android:textSize="20dp"
                     android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
