--- a/app/src/main/res/layout/activity_muckpot_detail.xml
+++ b/app/src/main/res/layout/activity_muckpot_detail.xml
@@ -34,9 +34,9 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:text="먹팟"
+                    android:text="행당동 마라팟"
                     android:textColor="#fff"
-                    android:textSize="24dp"
+                    android:textSize="20dp"
                     android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -57,13 +57,15 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@drawable/feed_border">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="20dp">
+                android:padding="20dp"
+                android:background="@drawable/feed_border">
 
                 <!--프로필 영역-->
                 <LinearLayout
@@ -126,12 +128,11 @@
                                 android:textSize="15dp" />
                         </LinearLayout>
                     </LinearLayout>
-
-                    <ImageButton
+                    <ImageView
+                        android:layout_width="2dp"
+                        android:layout_height="30dp"
                         android:layout_weight="0"
-                        android:layout_width="20dp"
-                        android:layout_height="60dp"
-                        android:src="@android:color/holo_green_dark" />
+                        android:src="@drawable/more" />
                 </LinearLayout>
 
                 <!--본문 텍스트 영역-->
@@ -141,7 +142,7 @@
                     android:layout_height="wrap_content">
                     <TextView
                         android:textSize="17dp"
-                        android:text="테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트"
+                        android:text="행당동이신 분들 저랑 같이 마라탕 먹어주세요 너무 먹고 싶음 ㅠㅠ!!!!!!!!!!"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                 </LinearLayout>
@@ -153,7 +154,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="20dp">
+                android:padding="20dp"
+                android:layout_marginHorizontal="10dp">
 
                 <LinearLayout
                     android:layout_marginVertical="10dp"
@@ -179,7 +181,7 @@
                         android:textSize="15dp"
                         android:layout_gravity="bottom"
                         android:layout_marginLeft="5dp"
-                        android:text="2/5"
+                        android:text="1/3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                 </LinearLayout>
