--- a/app/src/main/res/layout/activity_feed_write.xml
+++ b/app/src/main/res/layout/activity_feed_write.xml
@@ -48,70 +48,81 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:background="@drawable/feed_border"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@drawable/feed_border"
                 android:orientation="vertical"
                 android:padding="10dp">
+
                 <EditText
-                    android:hint="피드 내용을 입력하세요."
-                    android:textSize="20dp"
-                    android:lines="10"
-                    android:gravity="top|left"
-                    android:inputType="textMultiLine"
-                    android:scrollbars="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:background="@android:color/transparent"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:gravity="top|left"
+                    android:hint="피드 내용을 입력하세요."
+                    android:inputType="textMultiLine"
+                    android:lines="10"
+                    android:scrollbars="vertical"
+                    android:textSize="20dp" />
             </LinearLayout>
 
             <LinearLayout
-                android:padding="10dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:padding="10dp">
 
                 <ImageView
-                    android:src="@drawable/location"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:layout_marginRight="5dp"/>
+                    android:layout_marginRight="5dp"
+                    android:src="@drawable/location" />
+
                 <TextView
-                    android:textSize="17dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:text="위치 지정"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:textSize="17dp" />
             </LinearLayout>
+
             <LinearLayout
-                android:padding="10dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:padding="10dp">
 
                 <ImageView
-                    android:src="@drawable/camera"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:layout_marginRight="5dp"/>
+                    android:layout_marginRight="5dp"
+                    android:src="@drawable/camera" />
+
                 <TextView
-                    android:textSize="17dp"
-                    android:text="사진 첨부"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:text="사진 첨부"
+                    android:textSize="17dp" />
             </LinearLayout>
 
-            <LinearLayout
-                android:orientation="horizontal"
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="200dp"
+                android:id="@+id/feed_write_img"
+                android:src="@android:color/darker_gray" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
             </LinearLayout>
 
